--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Trending Wallpapers 2021</string>
+    <string name="app_name">Beautiful Wallpapers 2021</string>
 
     <!--    Test Ads Ids-->
 
